--- a/WeatherForecast/WeatherForecast/Info.plist
+++ b/WeatherForecast/WeatherForecast/Info.plist
@@ -53,12 +53,9 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
-	<key>UISupportedInterfaceOrientations~ipad</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationPortraitUpsideDown</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>현재 위치의 날씨정보를 요청하기 위해 위치 접근 허락이 필요합니다.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>현재 위치의 날씨정보를 요청하기 위해 위치 접근 허락이 필요합니다.</string>
 </dict>
 </plist>
