--- a/WeatherForecast/WeatherForecast/WeatherForecast/Info.plist
+++ b/WeatherForecast/WeatherForecast/WeatherForecast/Info.plist
@@ -20,10 +20,16 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>현재 위치의 날씨정보를 요청하기 위해 위치 접근 허용이 필요합니다.</string>
+	<key>NSLocationUsageDescription</key>
+	<string></string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>현재 위치의 날씨정보를 요청하기 위해 위치 접근 허용이 필요합니다.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
-		<false/>
+		<true/>
 		<key>UISceneConfigurations</key>
 		<dict>
 			<key>UIWindowSceneSessionRoleApplication</key>
@@ -53,11 +59,5 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>현재 위치의 날씨정보를 요청하기 위해 위치 접근 허용이 필요합니다.</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>현재 위치의 날씨정보를 요청하기 위해 위치 접근 허용이 필요합니다.</string>
-	<key>NSLocationUsageDescription</key>
-	<string></string>
 </dict>
 </plist>
